Fix overflow cuts shadow

--- a/src/components/Popover.scss
+++ b/src/components/Popover.scss
@@ -2,5 +2,6 @@
   .popover {
     position: absolute;
     z-index: 10;
+    padding: 10px;
   }
 }
